--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -76,3 +76,16 @@
     from { opacity: 0; top: 0px;}
     to { opacity: 1; top: 30px;}
 }
+.avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;      /* Circular image */
+    object-fit: cover;       /* Prevents stretching, nicely crops */
+    box-shadow: 0 1px 8px rgba(0,0,0,0.09);
+    display: inline-block;   /* Avoids overlap in flex/grid */
+}
+
+.profile-avatar {
+    text-align: center;
+    margin-bottom: 18px;
+}
