--- a/templates/matches/active.html
+++ b/templates/matches/active.html
@@ -20,7 +20,7 @@
                         <p>Buddied up on: {{ match.matched_date }}</p>
                         <p>Location: {{ match.location }}</p>
                     </div>
-                    <a href="">Chat</a>
+                    <a href="{% url 'demo_chat' %}">Chat</a>
 
                 </div>
             {% endfor %}
