--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,11 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <i class="fas fa-camera"></i>
-                <span>Photo Buddy</span>
+                <a href="{% url 'home' %}" class="nav-brand">
+                    <i class="fas fa-camera"></i>
+                    <span>Photo Buddy</span>
+                </a>
+
             </div>
             <div class="nav-menu" id="navMenu">
                 <a href="/" class="nav-link">Home</a>
