--- a/templates/chat/chat_list.html
+++ b/templates/chat/chat_list.html
@@ -11,11 +11,16 @@
         <ul class="chat-room-list" style="list-style: none; padding: 0;">
             {% for room in rooms %}
                 <li style="margin-bottom: 10px;">
-                    {% if room.user1 == request.user %}
-                        {% with other_user=room.user2 %}
+                    {% if match.user1 == request.user %}
+                        {% with other_user=match.user2 %}
+                            {{ other_user.username }}
+                        {% endwith %}
                     {% else %}
-                        {% with other_user=room.user1 %}
+                        {% with other_user=match.user1 %}
+                            {{ other_user.username }}
+                        {% endwith %}
                     {% endif %}
+
                     <a href="{% url 'chat_room' room.id %}" style="text-decoration:none; color:#333; display:block; padding:10px; border:1px solid #ccc; border-radius:5px;">
                         <strong>{{ other_user.username }}</strong>
                     </a>
